<resources>
    <string name="app_name">Course Schedule</string>
    <string name="add_course">Add Course</string>
    <string name="show_list">Show List</string>
    <string name="settings">Settings</string>
    <string name="course_name">Course Name</string>
    <string name="lecturer">Lecturer</string>
    <string name="note">Note</string>
    <string name="insert_course">Insert Course</string>
    <string name="today_schedule">Today\'s Schedule</string>
    <string name="title_activity_list">Course Schedule</string>
...
