...
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="150dp"
        android:layout_height="36dp"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/choose_days"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
...
